# heart-mind-robot

./: .gitignore  AUDIO_FIX_ANALYSIS.md  AUDIO_INPUT_DEBUG.md  AppIcon.icns  CMakeLists.txt  Info.plist  LICENSE  OPUS_FIX_REPORT.md  PORTAUDIO_MIGRATION.md  README.md  README_分发指南.md  REFACTOR_SUMMARY.md  build.bat  build.sh  create_dmg.sh  install_redistributable.bat  run_with_logs.ps1  update_icon.sh  分发前检查清单.md  完整安装指南.txt  给用户的说明.md  语音识别优化说明.md  麦克风权限设置指南.md
Resources/: config.json
config/: config.json
inc/: AudioInputManager.hpp  AudioPermission.h  EventHandler.hpp  GlobalHotkey.h  LAppLive2DManager.hpp  LAppModel.hpp  LAppWavFileHandler.hpp  MessageQueue.hpp  OpusEncoder.hpp  WebRTCAudioProcessor.hpp  platform_config.h  resource_loader.hpp
src/: AsyncIntegrationExample.cpp.disabled  AsyncIntegrationExample.h  AsyncIntegrationExample.h.disabled  AsyncMessageQueue.cpp  AsyncMessageQueue.h  AsyncStateManager.cpp  AsyncStateManager.h  AudioInputManager.cpp  AudioPermission.cpp  AudioPermission.mm  AudioUtil.cpp  AudioUtil.h  AudioUtil.mm  CMakeCache.txt  CMakeLists.txt  ChatDialog.h  ConfigManager.cpp  ConfigManager.h  ConversationWorker.cpp  ConversationWorker.h  ConversationWorker.h.bak  ConversationWorker_new.h  DeskPetController.cpp  DeskPetController.h  DeskPetIntegration.cpp  DeskPetIntegration.h  DeskPetStateManager.cpp  DeskPetStateManager.h  DeskPetWebSocketExample.cpp  DeviceFingerprint.cpp  DeviceFingerprint.h  EventHandler.cpp  GlobalHotkey.cpp  GlobalHotkey.mm  LAppDelegate.cpp  LAppLive2DManager.cpp  LAppModel.cpp  LAppPal.cpp  LAppWavFileHandler.mm  LAppWavFileHandler_stub.cpp  (+35 more)
third/: OPTIMIZATION_SUMMARY.md
third/glew/include/GL/: gl.h
third/glew/include/OpenGL/: gl.h
third/libopus/include/opus/: opus.h
third/live2d/cubism-sdk/: README.md
third/live2d/cubism-sdk/Framework/: CMakeLists.txt
third/portAudio/x64/: portaudio.lib
third/portAudio/x86/: portaudio.lib
